[gd_scene load_steps=21 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://element_btn_min_close_win.tscn" type="PackedScene" id=2]
[ext_resource path="res://Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainScr.gd" type="Script" id=4]
[ext_resource path="res://assets/game-controller.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/ubuntu-font-family/Ubuntu-L.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=8]
[ext_resource path="res://PanelHelp.tres" type="StyleBox" id=9]
[ext_resource path="res://element_icon_help_panel.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/FontAwesome5/fa-brands-400.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 34
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 34
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 34
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 35
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("element_btn_min_close_win:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -71 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BtnGoConf:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -71 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BtnGoAbout:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 52 ), Vector2( 0, -52 ) ]
}

[node name="MainScr" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Logo" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -188.0
margin_right = 165.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 165, 170.5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Logo"]
margin_right = 330.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 300 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Logo"]
margin_top = 304.0
margin_right = 330.0
margin_bottom = 341.0
text = "FES Launcher v1.3"
align = 1
valign = 1

[node name="BtnGoConf" type="Button" parent="."]
margin_right = 63.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesome" type="Label" parent="BtnGoConf"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
icon_size = 36
icon_type = "solid"
icon_name = "cog"

[node name="BtnGoAbout" type="Button" parent="."]
margin_top = 52.0
margin_right = 63.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesome" type="Label" parent="BtnGoAbout"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
icon_size = 36
icon_type = "solid"
icon_name = "question-circle"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -82.0
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_top = 1.0
margin_right = 1366.0
margin_bottom = 82.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_right = 218.0
margin_bottom = 81.0
size_flags_horizontal = 0
custom_constants/separation = 14

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_top = 22.0
margin_right = 126.0
margin_bottom = 59.0
text = "Message"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 198.0
margin_bottom = 81.0
custom_constants/separation = 10

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer" groups=[
"dev_btn",
]]
margin_right = 58.0
margin_bottom = 81.0
custom_styles/focus = SubResource( 3 )
text = "    "

[node name="FontAwesome" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_type = "solid"
icon_name = "donate"

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer" groups=[
"dev_btn",
]]
visible = false
margin_left = 68.0
margin_right = 126.0
margin_bottom = 81.0
custom_styles/focus = SubResource( 3 )
text = "    "

[node name="FontAwesome" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_type = "brands"
icon_name = "facebook"

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer" groups=[
"dev_btn",
]]
visible = false
margin_left = 136.0
margin_right = 194.0
margin_bottom = 81.0
custom_styles/focus = SubResource( 3 )
text = "    "

[node name="FontAwesome" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_type = "brands"
icon_name = "blogger"

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer" groups=[
"dev_btn",
]]
visible = false
margin_left = 204.0
margin_right = 262.0
margin_bottom = 81.0
custom_styles/focus = SubResource( 3 )
text = "    "

[node name="FontAwesome" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = ""
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 34
icon_type = "brands"
icon_name = "itch-io"

[node name="Hbx" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_right = 1346.0
margin_bottom = 81.0
mouse_filter = 2
custom_constants/separation = 50
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/Hbx"]
margin_left = 241.0
margin_right = 513.0
margin_bottom = 81.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="element_icon_help_panel" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer3" instance=ExtResource( 10 )]
margin_right = 72.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer3"]
margin_left = 78.0
margin_top = 20.0
margin_right = 272.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "GO_TO_LIST"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Hbx"]
margin_left = 563.0
margin_right = 903.0
margin_bottom = 81.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="element_icon_help_panel" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer" instance=ExtResource( 10 )]
margin_right = 72.0
margin_bottom = 81.0
action = "ui_accept2"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer"]
margin_left = 78.0
margin_top = 20.0
margin_right = 340.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "RANDOM_GAME"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/Hbx"]
margin_left = 953.0
margin_right = 1326.0
margin_bottom = 81.0
custom_constants/separation = 6
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="element_icon_help_panel" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer2" instance=ExtResource( 10 )]
margin_right = 72.0
margin_bottom = 81.0
action = "ui_cancel"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Hbx/HBoxContainer2"]
margin_left = 78.0
margin_top = 20.0
margin_right = 373.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.729412 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "CLOSE_LAUNCHER"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="element_btn_min_close_win" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 9 )
[connection signal="pressed" from="BtnGoConf" to="." method="_on_BtnGoConf_pressed"]
[connection signal="pressed" from="BtnGoAbout" to="." method="_on_BtnGoAbout_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button" to="." method="_on_OpenURL" binds= [ "https://ko-fi.com/dannygaray60" ]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button3" to="." method="_on_OpenURL" binds= [ "https://facebook.com/dannygarayrock" ]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button4" to="." method="_on_OpenURL" binds= [ "http://dannygaray60.blogspot.com" ]]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/HBoxContainer/Button5" to="." method="_on_OpenURL" binds= [ "https://dannygaray60.itch.io" ]]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
